--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,19 +1,44 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
+/* Custom utilities */
+@layer utilities {
+  .container {
+    width: 100%;
+    max-width: 1400px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  .primary-color {
+    background-color: #093874;
+  }
+
+  .font-roboto {
+    font-family: 'Roboto Condensed', 'Arial', sans-serif;
+  }
+
+  .font-pacifico {
+    font-family: 'Pacifico', sans-serif;
+  }
 }
+
+/* Custom components  */
+@layer components {
+  .btn-primary {
+    @apply px-4 py-2 text-white;
+  }
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto Condensed', Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #fff;
   background-color: #242424;
 }
-
